
= rufus-scheduler CHANGELOG.txt

== rufus-scheduler - 3.1.3    not yet released

- fix inconsistency in Job#start_work_thread


== rufus-scheduler - 3.1.2    released 2015/05/23

- avoid cron/:first_at infinite loop, thanks https://github.com/pouellet


== rufus-scheduler - 3.1.1    released 2015/04/19

- fix ZoTime.is_timezone? on OSX, thanks https://github.com/yaauie


== rufus-scheduler - 3.1.0    released 2015/04/18

- go without tzinfo (and its dependencies)
- include @ketan's #next_time improvements
- remove 2.x warning message on install


== rufus-scheduler - 3.0.9    released 2014/08/30

- fix TZ with underscores, thanks https://github.com/gnilrets
- integrate https://github.com/ecin Lock mecha


== rufus-scheduler - 3.0.8    released 2014/06/09

- handle TZInfo errors on DST transitions, thanks https://github.com/junhanamaki
- implement Scheduler#up?
- let schedule and schedule_at use Chronic if present
- let Rufus::Scheduler.parse use Chronic if present


== rufus-scheduler - 3.0.7    released 2014/03/18

- implement Scheduler #occurrences and #timeline, inspired by kreynolds
- implement Job #last_work_time and #mean_work_time
- implement Job#count
- add more info to the stderr error output (scheduler/tz info)
- prevent skipping a day on switch to summertime, gh-114, thanks Matteo


== rufus-scheduler - 3.0.6    released 2014/02/14

- avoid "can't be called from trap context" on Ruby 2.0, gh-98


== rufus-scheduler - 3.0.5    released 2014/01/30

- implement Job#call(do_rescue=false), gh-97
- implement :first => :now for repeat jobs, gh-96


== rufus-scheduler - 3.0.4    released 2014/01/19

- make CronLine#frequency faster (to avoid 20s schedule_cron times)


== rufus-scheduler - 3.0.3    released 2013/12/12

- CronLine#previous_time fix by Yassen Bantchev (https://github.com/yassenb)
- introduce ZookeptScheduler example in the readme
- rename #consider_lockfile to #lock and introduce #unlock


== rufus-scheduler - 3.0.2    released 2013/10/22
