@@ -1,8 +1,10 @@
 
 = rufus-scheduler CHANGELOG.txt
 
+
 == rufus-scheduler - 3.1.3    not yet released
 
+- prevent Thread[:rufus_scheduler_time] -> nil, gh-156
 - fix inconsistency in Job#start_work_thread
 
 
